--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -239,7 +239,7 @@
 }
 
 body {
-  font-family: 'Baloo Bhaijaan 2', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 html, body {
   width: 100%;
@@ -250,7 +250,7 @@ html, body {
 }
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Raleway', sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
